--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
     "postinstall": "npm run build",
     "format": "prettier --write 'src/**/*.ts'"
@@ -22,12 +22,15 @@
     "axios": "^1.7.1",
     "bcrypt": "^5.1.1",
     "bottleneck": "^2.19.5",
-    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
